--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>cascading-local</artifactId>
             <version>${cascading.version}</version>
         </dependency>
+        <dependency>
+            <groupId>cascading</groupId>
+            <artifactId>cascading-hadoop2-mr1</artifactId>
+            <version>${cascading.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -33,7 +38,7 @@
 
         <dependency>
             <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-common</artifactId>
+            <artifactId>hadoop-client</artifactId>
             <version>2.5.1</version>
             <scope>provided</scope>
             <exclusions>
