--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,14 @@
         <cascading.version>2.6.1</cascading.version>
     </properties>
 
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
     <dependencies>
         <dependency>
             <groupId>cascading</groupId>
