--- a/pom.xml
+++ b/pom.xml
@@ -119,4 +119,11 @@
             <url>http://conjars.org/repo</url>
         </repository>
     </repositories>
+
+    <distributionManagement>
+        <repository>
+            <id>conjars.org</id>
+            <url>http://conjars.org/repo</url>
+        </repository>
+    </distributionManagement>
 </project>
